--- a/admin.html
+++ b/admin.html
@@ -4,14 +4,207 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+        }
 
+        body, html {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #ff7e5f, #feb47b);
+            animation: gradient 6s ease infinite;
+            overflow: hidden;
+        }
+
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        /* Container */
+        .container {
+            width: 100%;
+            max-width: 400px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 15px;
+            padding: 2rem;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            transition: transform 0.4s ease;
+        }
+
+        h2 {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            color: #333;
+        }
+
+        input {
+            width: 100%;
+            padding: 0.8rem;
+            margin-bottom: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            font-size: 1rem;
+            outline: none;
+            transition: all 0.3s ease;
+        }
+
+        input:focus {
+            border-color: #ff7e5f;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        button {
+            width: 100%;
+            padding: 0.8rem;
+            background-color: #ff7e5f;
+            border: none;
+            border-radius: 8px;
+            color: white;
+            font-size: 1.1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #feb47b;
+        }
+
+        button:active {
+            transform: scale(0.98);
+        }
+
+        #error-message {
+            color: red;
+            margin-top: 1rem;
+        }
+
+        /* Responsive Admin Dashboard */
+        #admin-dashboard {
+            display: none;
+            width: 100%;
+            max-width: 900px; /* Set max width */
+            max-height: 90vh; /* Set max height for dashboard */
+            padding: 2rem;
+            background-color: white;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            overflow: auto; /* Enable scrolling */
+        }
+
+        /* Player Form */
+        #add-player-form input, #add-player-form select {
+            width: 100%;
+            padding: 0.8rem;
+            margin-bottom: 1rem;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+        }
+
+        /* Scrollable Player List */
+        #player-list-container {
+            max-height: 300px; /* Set max height for player list */
+            overflow-y: auto; /* Enable vertical scrolling */
+            margin-top: 1rem;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Player List Table */
+        #player-list table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        #player-list th, #player-list td {
+            padding: 1rem;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+
+        #player-list th {
+            background-color: #ff7e5f;
+            color: white;
+        }
+
+        /* Smooth scrolling */
+        #player-list-container::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        #player-list-container::-webkit-scrollbar-thumb {
+            background-color: #ff7e5f;
+            border-radius: 4px;
+        }
+
+        /* Show Bids Button Styling */
+        .show-bids-btn {
+            display: inline-block;
+            padding: 0.8rem 2rem;
+            margin-bottom: 1rem;
+            background: linear-gradient(135deg, #ff7e5f, #feb47b);
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(255, 126, 95, 0.4);
+            transition: all 0.3s ease;
+        }
+
+        .show-bids-btn:hover {
+            background: linear-gradient(135deg, #feb47b, #ff7e5f);
+            box-shadow: 0 6px 20px rgba(255, 126, 95, 0.6);
+            transform: translateY(-3px);
+        }
+
+        .show-bids-btn:active {
+            transform: scale(0.98);
+        }
+        /* Show Bids Button Styling */
+        .show-bids-btn {
+            display: inline-block;
+            padding: 0.8rem 2rem;
+            margin-bottom: 1rem;
+            background: linear-gradient(135deg, #ff7e5f, #feb47b);
+            color: white;
+            text-decoration: none;
+            font-size: 1.1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(255, 126, 95, 0.4);
+            transition: all 0.3s ease;
+        }
+
+        .show-bids-btn:hover {
+            background: linear-gradient(135deg, #feb47b, #ff7e5f);
+            box-shadow: 0 6px 20px rgba(255, 126, 95, 0.6);
+            transform: translateY(-3px);
+        }
+
+        .show-bids-btn:active {
+            transform: scale(0.98);
+        }
+
+    </style>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
     <script>
-        // Your web app's Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyB1sIeuehuTt6R9RNWlk9-j_vKuPzQKPL8",
             authDomain: "lr-auction.firebaseapp.com",
@@ -23,38 +216,31 @@
             measurementId: "G-KCBN7HE5T3"
         };
 
-        // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
         const database = firebase.database();
 
-        // Function to add player to Firebase Realtime Database
         function addPlayerToFirebase(player) {
             const newPlayerKey = database.ref().child('players').push().key;
             database.ref('players/' + newPlayerKey).set(player);
         }
 
-        // Function to render player list in the table
         function renderPlayerList(player, playerKey) {
             const playerList = document.querySelector("#player-list tbody");
             const row = document.createElement("tr");
-
             row.innerHTML = `
                 <td>${player.name}</td>
                 <td>${player.role}</td>
                 <td>${player.basePrice}</td>
                 <td><button onclick="deletePlayer('${playerKey}')">Delete</button></td>
             `;
-            
             playerList.appendChild(row);
         }
 
-        // Fetch players from Firebase and display in the admin page
         function fetchPlayers() {
             database.ref("players").on("value", function(snapshot) {
                 const playerList = document.querySelector("#player-list tbody");
-                playerList.innerHTML = ''; // Clear previous list
-
+                playerList.innerHTML = ''; 
                 snapshot.forEach(function(childSnapshot) {
                     const player = childSnapshot.val();
                     const playerKey = childSnapshot.key;
@@ -63,16 +249,13 @@
             });
         }
 
-        // Delete player from Firebase
         function deletePlayer(playerKey) {
             database.ref("players/" + playerKey).remove();
-            fetchPlayers(); // Refresh list after delete
+            fetchPlayers();
         }
 
-        // Function to handle adding a player
         function handleAddPlayer(event) {
-            event.preventDefault(); // Prevent form submission
-
+            event.preventDefault();
             const playerName = document.getElementById("player-name").value;
             const playerRole = document.getElementById("player-role").value;
             const basePrice = document.getElementById("base-price").value;
@@ -80,101 +263,91 @@
             const player = {
                 name: playerName,
                 role: playerRole,
-                basePrice: basePrice
+                basePrice: basePrice,
             };
 
-            // Add player to Firebase
             addPlayerToFirebase(player);
-            fetchPlayers(); // Refresh list
+            fetchPlayers(); 
         }
 
-        // Fetch players when page loads
-        window.onload = function() {
-            fetchPlayers();
-        };
+        document.addEventListener("DOMContentLoaded", function () {
+            const loginForm = document.getElementById("login-form");
+            const loginContainer = document.getElementById("login-container");
+            const dashboardContainer = document.getElementById("admin-dashboard");
+            const errorMessage = document.getElementById("error-message");
+            const addPlayerForm = document.getElementById("add-player-form");
+
+            loginForm.addEventListener("submit", function (event) {
+                event.preventDefault();
+                const email = document.getElementById("username").value;
+                const password = document.getElementById("password").value;
+
+                auth.signInWithEmailAndPassword(email, password)
+                    .then((userCredential) => {
+                        // Signed in 
+                        const user = userCredential.user;
+                        console.log("Login successful:", user);
+                        loginContainer.style.display = "none";
+                        dashboardContainer.style.display = "block";
+                        fetchPlayers(); 
+                    })
+                    .catch((error) => {
+                        const errorCode = error.code;
+                        const errorMessageText = error.message;
+                        console.error("Login error:", error);
+                        errorMessage.textContent = `Error: ${errorMessageText}`;
+                    });
+            });
+
+            addPlayerForm.addEventListener("submit", handleAddPlayer);
+        });
     </script>
 </head>
 <body>
-    <div class="container" id="login-container">
+    <div id="login-container" class="container">
         <h2>Admin Login</h2>
-        <form id="admin-login-form">
-            <label for="username">Username</label>
-            <input type="text" id="username" required>
-            <label for="password">Password</label>
-            <input type="password" id="password" required>
+        <form id="login-form">
+            <input type="email" id="username" placeholder="Email" required />
+            <input type="password" id="password" placeholder="Password" required />
             <button type="submit">Login</button>
-            <p id="error-message" class="error"></p>
+            <div id="error-message"></div>
         </form>
-        
-        <h3>Or</h3>
-        <button id="go-to-players">Go to Player List</button>
     </div>
 
-    <div id="admin-dashboard" class="hidden">
+    <div id="admin-dashboard">
         <h2>Admin Dashboard</h2>
-        <form id="add-player-form" onsubmit="handleAddPlayer(event)">
-            <input type="text" id="player-name" placeholder="Player Name" required>
-            <select id="player-role">
+        <form id="add-player-form">
+            <a href="index.html" class="show-bids-btn">Show Bids</a>
+
+            <input type="text" id="player-name" placeholder="Player Name" required />
+            <select id="player-role" required>
+                <option value="">Select Role</option>
                 <option value="Batsman">Batsman</option>
                 <option value="Bowler">Bowler</option>
-                <option value="All-Rounder">All-Rounder</option>
+                <option value="All-rounder">All-rounder</option>
             </select>
-            <input type="number" id="base-price" placeholder="Base Price" required>
-            <button type="submit" id="addplayer">Add Player</button>
+            <input type="number" id="base-price" placeholder="Base Price" required />
+            <button type="submit">Add Player</button>
         </form>
-        <h3>Player List</h3>
-        <table id="player-list">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Role</th>
-                    <th>Base Price</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-        <button onclick="logout()">Logout</button>
-        <a href="index.html"><button>Show Bid</button></a>
+
+        <div id="player-list-container">
+            <h3>Player List</h3>
+            <div id="player-list">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Role</th>
+                            <th>Base Price</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Players will be dynamically added here -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-
-    <script>
-        const loginForm = document.getElementById("admin-login-form");
-        const errorMessage = document.getElementById("error-message");
-        const dashboard = document.getElementById("admin-dashboard");
-        const loginContainer = document.getElementById("login-container");
-
-        // Admin login logic
-        loginForm.addEventListener("submit", function(event) {
-            event.preventDefault();
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-
-            // Check credentials against Firebase authentication
-            auth.signInWithEmailAndPassword(username, password).then((userCredential) => {
-                // Successful login
-                loginContainer.classList.add("hidden");
-                dashboard.classList.remove("hidden");
-                fetchPlayers(); // Fetch players after login
-            }).catch((error) => {
-                errorMessage.textContent = error.message;
-            });
-        });
-
-        // Go to player list button logic
-        document.getElementById("go-to-players").addEventListener("click", function() {
-            window.location.href = "player.html";  // Assuming player.html exists
-        });
-
-        // Logout function
-        function logout() {
-            auth.signOut().then(() => {
-                loginContainer.classList.remove("hidden");
-                dashboard.classList.add("hidden");
-                errorMessage.textContent = ""; // Clear any error messages
-            });
-        }
-    </script>
-
 </body>
 </html>
